--- a/default.project.json
+++ b/default.project.json
@@ -10,6 +10,12 @@
     },
 
     "ServerScriptService": {
+      "PlayerData": {
+        "$path": "src/data"
+      },
+      "Libs": {
+        "$path": "src/libs"
+      },
       "Server": {
         "$path": "src/server"
       }
